Add Summary with chart
